[project]
name = "iplmcp"
version = "1.0.0"
description = "IPL Cricket Database MCP Server"
requires-python = ">=3.11"

dependencies = [
    "mcp>=1.0.0",
    "mysql-connector-python>=8.0.0",
    "python-dotenv>=1.0.0",
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
